--- a/analyzer.ui
+++ b/analyzer.ui
@@ -20,6 +20,16 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
+      <widget class="QWidget" name="eventTab">
+       <attribute name="title">
+        <string>Events</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_5">
+        <item>
+         <widget class="QTableView" name="eventView"/>
+        </item>
+       </layout>
+      </widget>
       <widget class="QWidget" name="transferTab">
        <attribute name="title">
         <string>Transfers</string>
